updated package.xml to format 2

--- a/iop_client_illumination_fkie/CMakeLists.txt
+++ b/iop_client_illumination_fkie/CMakeLists.txt
@@ -5,9 +5,11 @@ project(iop_client_illumination_fkie)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
+             diagnostic_msgs
+             iop_component_fkie
              iop_ocu_slavelib_fkie
              roscpp
-             tf)
+             std_msgs)
 iop_init(COMPONENT_ID 0)
 iop_export_service(urn_jaus_jss_ugv_IlluminationServiceClient)
 
@@ -18,7 +20,10 @@ catkin_package(
     INCLUDE_DIRS include/public
     LIBRARIES ${PROJECT_NAME}
     CATKIN_DEPENDS
+        diagnostic_msgs
+        iop_component_fkie
         iop_ocu_slavelib_fkie
+        std_msgs
 )
 
 ###########
