--- a/iop_client_stabilizer_driver_fkie/CMakeLists.txt
+++ b/iop_client_stabilizer_driver_fkie/CMakeLists.txt
@@ -5,11 +5,13 @@ project(iop_client_stabilizer_driver_fkie)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
-             gps_common
+             iop_component_fkie
              iop_ocu_slavelib_fkie
              roscpp
-             tf)
-iop_init(COMPONENT_ID 163)
+             sensor_msgs
+             std_msgs)
+find_package(Boost REQUIRED COMPONENTS system thread)
+iop_init(COMPONENT_ID 0)
 
 
 ###################################
@@ -18,7 +20,11 @@ iop_init(COMPONENT_ID 163)
 catkin_package(
     LIBRARIES ${PROJECT_NAME}
     CATKIN_DEPENDS
+        iop_component_fkie
         iop_ocu_slavelib_fkie
+        sensor_msgs
+        std_msgs
+    DEPENDS Boost
 )
 
 ###########
