fixed catkin_lint errors

--- a/fkie_iop_client_illumination/CMakeLists.txt
+++ b/fkie_iop_client_illumination/CMakeLists.txt
@@ -23,6 +23,7 @@ catkin_package(
         diagnostic_msgs
         fkie_iop_component
         fkie_iop_ocu_slavelib
+        roscpp
         std_msgs
 )
 
