--- a/fkie_iop_client_power_plant/CMakeLists.txt
+++ b/fkie_iop_client_power_plant/CMakeLists.txt
@@ -21,6 +21,7 @@ catkin_package(
     CATKIN_DEPENDS
         fkie_iop_component
         fkie_iop_ocu_slavelib
+        roscpp
         std_msgs
 )
 
