--- a/fkie_iop_client_stabilizer_driver/CMakeLists.txt
+++ b/fkie_iop_client_stabilizer_driver/CMakeLists.txt
@@ -22,6 +22,7 @@ catkin_package(
     CATKIN_DEPENDS
         fkie_iop_component
         fkie_iop_ocu_slavelib
+        roscpp
         sensor_msgs
         std_msgs
     DEPENDS Boost
