--- a/fkie_iop_client_stabilizer_driver/CMakeLists.txt
+++ b/fkie_iop_client_stabilizer_driver/CMakeLists.txt
@@ -1,37 +1,32 @@
-cmake_minimum_required(VERSION 3.0.2)
+cmake_minimum_required(VERSION 3.5)
 project(fkie_iop_client_stabilizer_driver)
 
-## Find catkin macros and libraries
-## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
-## is used, also find other catkin packages
-find_package(catkin REQUIRED COMPONENTS
-             fkie_iop_component
-             fkie_iop_ocu_slavelib
-             roscpp
-             sensor_msgs
-             std_msgs)
-find_package(Boost REQUIRED COMPONENTS system thread)
-iop_init(COMPONENT_ID 0)
+# Default to C99
+if(NOT CMAKE_C_STANDARD)
+  set(CMAKE_C_STANDARD 99)
+endif()
 
+# Default to C++14
+if(NOT CMAKE_CXX_STANDARD)
+  set(CMAKE_CXX_STANDARD 14)
+endif()
 
-###################################
-## catkin specific configuration ##
-###################################
-catkin_package(
-    LIBRARIES ${PROJECT_NAME}
-    CATKIN_DEPENDS
-        fkie_iop_component
-        fkie_iop_ocu_slavelib
-        roscpp
-        sensor_msgs
-        std_msgs
-    DEPENDS Boost
+if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+  add_compile_options(-Wall -Wextra -Wpedantic -Wno-ignored-qualifiers)
+endif()
+
+find_package(ament_cmake REQUIRED)
+find_package(fkie_iop_ocu_slavelib REQUIRED)
+find_package(sensor_msgs REQUIRED)
+find_package(std_msgs REQUIRED)
+
+###############
+## setup IOP ##
+###############
+iop_init()
+iop_export_service(
+  urn_jaus_jss_ugv_StabilizerDriverClient
 )
-
-###########
-## Build ##
-###########
-
 ## Specify additional locations of header files
 iop_code_generator(
   IDLS
@@ -44,7 +39,6 @@ iop_code_generator(
   OVERRIDES
     include/urn_jaus_jss_ugv_StabilizerDriverClient/StabilizerDriverClient_ReceiveFSM.h
     src/urn_jaus_jss_ugv_StabilizerDriverClient/StabilizerDriverClient_ReceiveFSM.cpp
-    src/main.cpp
   EXTERN_SERVICES
     urn_jaus_jss_core_AccessControlClient
     urn_jaus_jss_core_EventsClient
@@ -52,28 +46,46 @@ iop_code_generator(
     urn_jaus_jss_core_ManagementClient
   GENERATED_SOURCES cppfiles
 )
-include_directories(${catkin_INCLUDE_DIRS})
 
-## Declare a cpp executable
-add_library(${PROJECT_NAME}
-            src/StabilizerDriverClientPlugin.cpp
+###########
+## Build ##
+###########
+set(dependencies
+  fkie_iop_ocu_slavelib
+  sensor_msgs
+  std_msgs
+)
+
+include_directories(
+  ${IOP_COMPONENT_INCLUDE_DIRS}
+)
+
+add_library(${PROJECT_NAME} SHARED
             ${cppfiles}
 )
 
-## Specify libraries to link a library or executable target against
-target_link_libraries(${PROJECT_NAME}
-                      ${catkin_LIBRARIES}
+ament_target_dependencies(${PROJECT_NAME} ${dependencies})
+
+#############
+## Install ##
+#############
+
+install(
+  DIRECTORY ${IOP_INSTALL_INCLUDE_DIRS}
+  DESTINATION include/${PROJECT_NAME}
+  PATTERN "*.old" EXCLUDE
+  PATTERN "*.gen" EXCLUDE
 )
 
 install(TARGETS ${PROJECT_NAME}
-  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+  ARCHIVE DESTINATION lib
+  LIBRARY DESTINATION lib
+  RUNTIME DESTINATION lib/${PROJECT_NAME}
 )
 
-## Mark other files for installation (e.g. launch and bag files, etc.)
-install(
-   FILES ./plugin_iop.xml
-   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
-)
+ament_export_include_directories(include ${IOP_COMPONENT_INCLUDE_DIRS})
+ament_export_libraries(${PROJECT_NAME})
+ament_export_dependencies(${dependencies})
+pluginlib_export_plugin_description_file(fkie_iop_component plugin_iop.xml)
 
+ament_package()
